fix text align

--- a/css/resume.css
+++ b/css/resume.css
@@ -20,6 +20,7 @@ h1 {
 
 h2 {
   font-size: 3rem;
+  text-align: center;
 }
 
 h3 {
